# ImGuiOverlay

./: .gitignore  .last_deploy_md5  603408710b965713ae265fb8ebb751de_paths.json  CHANGELOG.md  CHANGELOG.txt  README.md  [更新日志] v1.8+_2026-06-27_修复出口拖拽冲突与路径保存问题.txt  [更新日志] v1.9_2026-06-27_路线终点强制为出口+出口拖拽冲突修复.txt  [更新日志] v2.0_2026-06-27_全面重构与修复.txt  [更新日志] v2.0_2026-06-27_路径按地图楼层隔离.txt  [更新日志] v2.12_2026-06-29_启动画面品牌重命名.txt  [更新日志] v2.19_2026-06-30_内核模块隐身+删除用户层备胎.txt  [更新日志] v2.20_2026-06-30_四项优化.txt  [更新日志] v2.3_2026-06-27_修复首次地图识别为地图1的问题.txt  [更新日志] v2.4_2026-06-27_修复一楼误判为二楼.txt  analyze_hjm_actionid.py  analyze_v3.py  deploy.sh  diag_adrp.py  diag_v2.py  draw_Gui.cpp-v2.11-backup  extract_paths.py  find_action_ui.py  hjm_v2.3.sh  license.enc  map_config_phone.json  musicbox_stools_clean.json  overlay-v2.11-stable  overlay-v2.11-stable.md5  overlay-v2.12-stable  overlay-v2.12-stable.md5  overlay-v2.13-stable  overlay-v2.13-stable.md5  overlay-v2.14-stable  overlay-v2.15-stable  overlay-v2.16-stable  overlay-v2.16-stable.md5  overlay-v2.34-stable  overlay-v2.35-debug  overlay-v2.37-server-phone  (+14 more)
app/src/main/cpp/: Android.mk  CMakeLists.txt
app/src/main/cpp/include/Android_Graphics/: GraphicsManager.h  OpenGLGraphics.h  VulkanGraphics.h  vulkan_wrapper.h
app/src/main/cpp/include/Android_draw/: draw.h
app/src/main/cpp/include/Android_my_imgui/: AndroidImgui.h  my_imgui.h
app/src/main/cpp/include/Android_touch/: TouchHelperA.h  Utils.h  VectorStruct.h  spinlock.h
app/src/main/cpp/include/ImGui/: imconfig.h  imgui.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
app/src/main/cpp/include/ImGui/backends/: imgui_impl_android.h  imgui_impl_opengl3.h  (+2 more)
app/src/main/cpp/include/My_Utils/: stb_image.h
app/src/main/cpp/include/native_surface/: ANativeWindowCreator.h
app/src/main/cpp/src/: main.cpp
app/src/main/cpp/src/Android_Graphics/: GraphicsManager.cpp  OpenGLGraphics.cpp  VulkanGraphics.cpp  vulkan_wrapper.cpp
app/src/main/cpp/src/Android_draw/: DataManager.cpp  DataManager.h  Name.h  Structs.h  ThreadAffinity.h  anti_debug.h  crypto.h  draw_Gui.cpp  driver.h  driver_interface.h  driver_registry.h  driver_rt.h  driver_twt.h  mem_rw_client.h  net_client.h  stealth.h  千叶.h
app/src/main/cpp/src/Android_my_imgui/: AndroidImgui.cpp  my_imgui.cpp  my_imgui_impl_android.cpp
app/src/main/cpp/src/Android_touch/: TouchHelperA.cpp
app/src/main/cpp/src/ImGui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
app/src/main/cpp/src/My_Utils/: stb_image.cpp
(+34 files in other folders)
